k8s/05-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-service
        resources:
          requests:
            cpu: "100m"    # 0.25 CPU cores
            memory: "256Mi" # 0.5 GB RAM
          limits:
            cpu: "250m"
            memory: "512Mi"
        image: kirarhemant/api-service:v2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP  # Change from LoadBalancer
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 5000
